--- a/index.html
+++ b/index.html
@@ -4,12 +4,48 @@
     <meta charset="utf-8">
     <title>Zetsy - Handmade</title>
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
     <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.1/modernizr.min.js"></script>
   </head>
-  
+
   <body>
     <div class="wrapper">
-      <!-- your code here! -->
+      <div class="header">
+        <h1 id="zetsy" class="headers">Zetsy</h1>
+      </div>
+      <hr>
+      <div class="picture">
+        <img src="images/necklace.jpg" alt="">
+      </div>
+      <div class="about">
+        <h2 class="headers">About</h2>
+      </div>
+      <div class="paragraph">
+        <p>Mary</p>
+        <p>Jewelry</p>
+        <p>Marry's</p>
+      </div>
+      <div class="press">
+        <h2 class="headers">Press</h2>
+      </div>
+      <div class="pictures clearfix">
+        <div class="col-1">
+          <img src="images/nmai-logo.png" alt="">
+        </div>
+        <div class="col-2">
+          <img src="images/times-logo.png" alt="">
+        </div>
+        <div class="col-3">
+          <img src="images/sedona-logo.png" alt="">
+        </div>
+        <div class="col-4">
+          <img src="images/bergdorf-logo.png" alt="">
+        </div>
+        <div class="alr">
+          <p>2014 Zetsy. All Right Reserved</p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
